# pose

./: .gitignore  LICENSE  README.md  environment.yaml  setup.cfg
src/: settings.yaml
src/pose/: dataset.py  definitions.py  util.py
src/pose/data/: coco-wholebody.py  data.py  mpii.py
src/pose/two/: estimator.py
src/pose/two/multi_person/: dataset.py
src/pose/two/single_person/: dataset.py
src/pose/two/single_person/part_detection/: __init__.py
src/pose/two/single_person/regression/: dataset.py  deeppose.py
