[metadata]
name = pose
version = 0.0.1
author = James Ross
author_email = jross02@student.ubc.ca
description = A comprehensive library for many forms of human pose estimation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ubcdsci/pose
project_urls =
    Bug Tracker = https://github.com/ubcdsco/pose/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src